// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`consignments 스냅샷 > ConsignmentWithRelations 키 구조 1`] = `
{
  "adjustmentPrice": "null",
  "adjustmentToken": "null",
  "appliedAt": "string",
  "approvedAt": "string",
  "composition": "string",
  "createdAt": "string",
  "desiredPrice": "number",
  "employeePurchaseDate": "null",
  "id": "string",
  "imageUrl": "string",
  "inspectedAt": "string",
  "inspectionImage": "null",
  "itemType": "string",
  "measurements": "object",
  "memo": "null",
  "origin": "string",
  "privacyConsent": "null",
  "productCondition": "string",
  "productId": "string",
  "productName": "string",
  "productNumber": "string",
  "receivedAt": "string",
  "sellerCounterPrice": "null",
  "sellerId": "string",
  "sellerResponse": "null",
  "sellers": "object",
  "sellers_shape": "{"name":"string","phone":"string","sellerCode":"string","sellerTier":"string"}",
  "source": "string",
  "stProducts": "object",
  "status": "string",
  "updatedAt": "string",
}
`;

exports[`consignments 스냅샷 > findById 결과 구조 1`] = `
{
  "adjustmentPrice": "null",
  "adjustmentToken": "null",
  "appliedAt": "string",
  "approvedAt": "string",
  "composition": "string",
  "createdAt": "string",
  "desiredPrice": "number",
  "employeePurchaseDate": "null",
  "id": "string",
  "imageUrl": "string",
  "inspectedAt": "string",
  "inspectionImage": "null",
  "itemType": "string",
  "measurements": "object",
  "memo": "null",
  "origin": "string",
  "privacyConsent": "null",
  "productCondition": "string",
  "productId": "string",
  "productName": "string",
  "productNumber": "string",
  "receivedAt": "string",
  "sellerCounterPrice": "null",
  "sellerId": "string",
  "sellerResponse": "null",
  "sellers": "object",
  "source": "string",
  "stProducts": "object",
  "status": "string",
  "updatedAt": "string",
}
`;

exports[`notifications 스냅샷 > NotificationLogWithRelations 키 구조 1`] = `
{
  "apiResponse": "object",
  "channel": "string",
  "consignmentId": "string",
  "consignment_requests": "object",
  "createdAt": "string",
  "id": "string",
  "message": "string",
  "phone": "string",
  "sellerId": "string",
  "sellers": "object",
  "status": "string",
  "triggerEvent": "string",
}
`;

exports[`orders 스냅샷 > OrderItem via getItemsByOrderId 구조 1`] = `
{
  "brand": "string",
  "category": "string",
  "condition": "string",
  "createdAt": "string",
  "customerAgreed": "boolean",
  "customerAgreedAt": "null",
  "customerPrice": "number",
  "estimatedPrice": "number",
  "finalPrice": "null",
  "holdAdjustedPrice": "null",
  "holdDate": "null",
  "holdPhotoUrl": "null",
  "holdReason": "null",
  "id": "string",
  "imageUrl": "string",
  "inspectionStatus": "string",
  "itemType": "null",
  "measurements": "null",
  "model": "string",
  "orderId": "string",
  "productNumber": "string",
  "size": "null",
  "status": "string",
}
`;

exports[`orders 스냅샷 > OrderWithItems 키 구조 1`] = `
{
  "address": "string",
  "arrivalDate": "null",
  "boxQty": "number",
  "commission": "number",
  "createdAt": "string",
  "customCommissionRate": "null",
  "customerName": "string",
  "finalPayout": "number",
  "holdToken": "null",
  "id": "string",
  "orderNumber": "string",
  "order_items": "array(1)",
  "order_items[0]_shape": "{"id":"string","orderId":"string","productNumber":"string","brand":"string","model":"string","category":"string","condition":"string","estimatedPrice":"number","finalPrice":"null","status":"string","imageUrl":"string","createdAt":"string","customerPrice":"number","size":"null","inspectionStatus":"string","itemType":"null","measurements":"null","holdAdjustedPrice":"null","holdReason":"null","holdPhotoUrl":"null","holdDate":"null","customerAgreed":"boolean","customerAgreedAt":"null"}",
  "phone": "string",
  "postalCode": "string",
  "purchaseSource": "string",
  "sellerType": "string",
  "status": "string",
  "totalEstimated": "number",
  "updatedAt": "string",
  "visitDate": "null",
}
`;

exports[`products 스냅샷 > ProductSummary 구조 1`] = `
{
  "inactive": "number",
  "photoDone": "number",
  "photoPending": "number",
  "selling": "number",
  "sold": "number",
}
`;

exports[`products 스냅샷 > StProductWithSeller 키 구조 1`] = `
{
  "brand": "string",
  "buyerName": "null",
  "category": "string",
  "color": "null",
  "composition": "string",
  "consignmentDate": "string",
  "createdAt": "string",
  "id": "string",
  "isActive": "boolean",
  "legacyCode": "null",
  "material": "null",
  "measurements": "object",
  "naverProductId": "null",
  "origin": "string",
  "photoStatus": "string",
  "photos": "array(0)",
  "productCondition": "null",
  "productName": "string",
  "productNumber": "string",
  "productType": "string",
  "referenceImage": "string",
  "retailPrice": "number",
  "retailPriceConfidence": "number",
  "retailPriceSource": "string",
  "salePrice": "number",
  "salesRecordId": "null",
  "sellerId": "string",
  "sellerPayment": "null",
  "sellers": "object",
  "size": "null",
  "smartStoreRegistered": "boolean",
  "smartstoreData": "null",
  "smartstoreStatus": "string",
  "soldAmount": "null",
  "soldAt": "null",
  "unsellableReason": "null",
  "updatedAt": "string",
}
`;

exports[`sellers 스냅샷 > Seller 키 구조 1`] = `
{
  "address": "null",
  "bankAccount": "null",
  "bankHolder": "null",
  "bankName": "null",
  "bankVerified": "boolean",
  "channelType": "string",
  "commissionRate": "number",
  "contractEnd": "null",
  "contractStart": "null",
  "createdAt": "string",
  "email": "null",
  "id": "string",
  "idCardFileUrl": "null",
  "idCardNumber": "null",
  "idCardVerified": "boolean",
  "marketingConsent": "boolean",
  "marketingConsentAt": "null",
  "name": "string",
  "nickname": "null",
  "phone": "string",
  "sellerCode": "string",
  "sellerTier": "string",
  "status": "string",
  "taggingCode": "null",
  "updatedAt": "string",
}
`;

exports[`sellers 스냅샷 > listByPage 결과 구조 1`] = `
{
  "dataLength": 2,
  "firstRowShape": {
    "address": "null",
    "bankAccount": "null",
    "bankHolder": "null",
    "bankName": "null",
    "bankVerified": "boolean",
    "channelType": "string",
    "commissionRate": "number",
    "contractEnd": "null",
    "contractStart": "null",
    "createdAt": "string",
    "email": "null",
    "id": "string",
    "idCardFileUrl": "null",
    "idCardNumber": "null",
    "idCardVerified": "boolean",
    "marketingConsent": "boolean",
    "marketingConsentAt": "null",
    "name": "string",
    "nickname": "null",
    "phone": "string",
    "sellerCode": "string",
    "sellerTier": "string",
    "status": "string",
    "taggingCode": "null",
    "updatedAt": "string",
  },
  "total": "number",
}
`;
